2004-03-12  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-shapes.c: Allow for base64 embedded image data
	
2004-03-11  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Ability to scale SVGs that don't provide a width or height
	
2004-03-11  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-shapes.c: Improve image scaling, translation. Rotation is still
	horked, though. Agree with Caleb's comments below.
	
2004-03-11  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c, rsvg-styles.c: added state domination, ability for a
	use's values to overwrite even explicitly set state variables in the
	symbol.
	* rsvg-shapes.c: Fixed image bitmap sizing, may need to give the whole 
	system a good rewrite sometime to avoid having to use crappy libart 
	rotation etc. and eventually make it easier to port to cairo, added
	ability to use filters with images.
	* rsvg-filter.c: Fixed arithmetic compositition.
	* rsvg-text.c: fixed little filter bug I opened up a few days ago
	* rsvg-defs.c: fixed memory leak that means unnamed defs are never 
	freed.

2004-03-10  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c: exported drawable structures and functions 
	* rsvg-filter.c: made feImage work for internal references (like use)
	* rsvg-css.c: fixed spelling of dodgerblue (was dogerblue)

2004-03-09  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c: HUUUUGE fixes to use

2004-03-09  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c: made groups "use"able
	* rsvg-styles.c: changed inheritance mechanism

2004-03-07  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Do something for clahey (bug 105316)
	
2004-03-07  Dom Lachowicz <cinamod@hotmail.com>

	* gtk-engine/*.[ch]: Theme engine now renders SVGs at their display
	size, thus cutting down on a lot of nasty raster scaling
	
2004-03-04  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Forward-port things from Gman
	* rsvg-styles.c: Forward-port patch from Dodji